--- a/src/views/index.html
+++ b/src/views/index.html
@@ -56,6 +56,44 @@
             <button>Adicionar <img src="rsc/img/add button.png" alt="Add button"></button>
         </section>
     </div>
+
+    <div class="contact">
+        <h1>Mais fácil que gastar dinheiro</h1>
+        <div class="contact-img">
+            <img src="/rsc/img/Acesso online.png" alt="Acesso online">
+            <img src="/rsc/img/rendimento facil.png" alt="">
+            <img src="/rsc/img/resgate simples.png" alt="">
+        </div>
+        <button>Entre em contato</button>
+    </div>
+
+    <div class="testimony">
+        <img src="/rsc/img/testimony.png" alt="">
+    </div>
+
+    <div class="account">
+        <form action="" class="create-account">
+            <fieldset>
+                <h2>Crie sua conta</h2>
+                <div class="form">
+                    <label for="name">Nome Completo</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form">
+                    <label for="email">E-mail</label>
+                    <input type="text" name="email" id="email" required>
+                </div>
+                <button>Iniciar Cadastro</button>
+            </fieldset>
+            
+        </form>
+
+        <div class="support">
+            <img src="/rsc/img/online-suport.png" alt="Suporte online 24h">
+            <p>Ajuda 24h do nosso Suporte Online</p>
+        </div>
+        
+    </div>
     
 </body>
 </html>
