--- a/public/styles/styleMain.less
+++ b/public/styles/styleMain.less
@@ -3,6 +3,7 @@
 @background-secondary-color: #F2F2F2;
 @text-primary-color: #000000;
 @text-secondary-color: #565656;
+@input-color: #DDDDDD;
 @button-text-color: #f2f2f2;
 
 
@@ -12,20 +13,21 @@
     padding: 0;;
 }
 
+h1, a, p, button, legend, label{
+    font-family: 'IBM Plex Sans', sans-serif;
+}
+
 button{
     background: @primary-color;
     border: none;
     color: @button-text-color;
     border-radius: .2rem;
-    font-family: 'IBM Plex Sans', sans-serif;
 }
-
-
 
 a{
     text-decoration: none;
     color: @text-primary-color;
-    font-family: 'IBM Plex Sans', sans-serif;
+    
 }
 
 html, body {
@@ -73,7 +75,6 @@ header{
 }
 
 .invest-now h1{
-    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 3rem;
     letter-spacing: .2rem;
     line-height: 3.5rem;
@@ -122,8 +123,6 @@ header{
   width: 11rem;
   margin-top: .8rem;
   margin-left: 2rem;
-
-  
 }
 
 .proffits button img{
@@ -132,4 +131,85 @@ header{
     vertical-align: middle;
 }
 
+.contact{
+    text-align: center;
+    margin-top: 3rem;
+}
 
+.contact-img{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 2rem;
+}
+
+.contact-img img{
+    height: 20rem;
+}
+
+.contact button{
+    height: 3rem;
+    width: 10rem;
+    margin-top: 2rem;
+}
+
+.testimony img {
+    width: 100%;
+    margin-top: 3rem;
+}
+
+.account{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: -.2rem;
+}
+
+.create-account h2{
+    margin-top: 2rem;
+    text-align: center;
+    color: @primary-color;
+    margin-bottom: 2rem;
+    font-size: 2rem;
+}
+
+.create-account fieldset{
+    border: none;
+    width: 50rem;
+    height: 22rem;
+    background: @background-secondary-color;
+    text-align: center;
+}
+
+.create-account fieldset label{
+    margin-bottom: .5rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.create-account fieldset input{
+    width: 20rem;
+    height: 2rem;
+    margin-bottom: 2rem;
+    background: @input-color;
+    border: none;
+    border-radius: .2rem;
+}
+
+.create-account fieldset button{
+    width: 10rem;
+    height: 3rem;
+}
+
+
+.account .support {
+    margin-right: 7rem;
+}
+
+.account .support img{
+    height: 18rem;
+}
+
+.account .support p{
+    text-align: center;
+    margin-top: 2rem;
+}
