1. Ajustado responsividade e espaçamento do campo de criar conta

--- a/public/styles/styleMain.less
+++ b/public/styles/styleMain.less
@@ -160,7 +160,7 @@ header{
 .account{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin-top: -.2rem;
 }
 
@@ -178,6 +178,7 @@ header{
     height: 22rem;
     background: @background-secondary-color;
     text-align: center;
+    margin-left: -10rem;
 }
 
 .create-account fieldset label{
@@ -198,11 +199,6 @@ header{
 .create-account fieldset button{
     width: 10rem;
     height: 3rem;
-}
-
-
-.account .support {
-    margin-right: 7rem;
 }
 
 .account .support img{
