--- a/public/styles/styleMain.css
+++ b/public/styles/styleMain.css
@@ -128,7 +128,7 @@ header {
 .account {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   margin-top: -0.2rem;
 }
 .create-account h2 {
@@ -144,6 +144,7 @@ header {
   height: 22rem;
   background: #F2F2F2;
   text-align: center;
+  margin-left: -10rem;
 }
 .create-account fieldset label {
   margin-bottom: 0.5rem;
@@ -161,9 +162,6 @@ header {
 .create-account fieldset button {
   width: 10rem;
   height: 3rem;
-}
-.account .support {
-  margin-right: 7rem;
 }
 .account .support img {
   height: 18rem;
