--- a/src/views/index.html
+++ b/src/views/index.html
@@ -33,26 +33,30 @@
     <div class="banks">
         <section class="proffits">
             <p>LCI 2018/12</p>
-            <p>110% CDB</p>
-            <p>Banco Certo</p>
+            <p class="text-proffits">110% CDB</p>
+            <hr class="line">
+            <p class="text-bank">Banco Certo</p>
             <button>Adicionar <img src="rsc/img/add button.png" alt="Add button"></button>
         </section>
         <section class="proffits">
             <p>LCI 2020/01</p>
-            <p>115% CDB</p>
-            <p>Santrafe</p>
+            <p class="text-proffits">115% CDB</p>
+            <hr class="line">
+            <p class="text-bank">Santrafe</p>
             <button>Adicionar <img src="rsc/img/add button.png" alt="Add button"></button>
         </section>
         <section class="proffits">
             <p>LCA 2022/06</p>
-            <p>117% CDB</p>
-            <p>Banco Inova</p>
+            <p class="text-proffits">117% CDB</p>
+            <hr class="line">
+            <p class="text-bank">Banco Inova</p>
             <button>Adicionar <img src="rsc/img/add button.png" alt="Add button"></button>
         </section>
         <section class="proffits">
             <p>LCI 2018/07</p>
-            <p>122% CDB</p>
-            <p>Cofre Agora</p>
+            <p class="text-proffits">122% CDB</p>
+            <hr class="line">
+            <p class="text-bank">Cofre Agora</p>
             <button>Adicionar <img src="rsc/img/add button.png" alt="Add button"></button>
         </section>
     </div>
@@ -93,6 +97,40 @@
             <p>Ajuda 24h do nosso Suporte Online</p>
         </div>
         
+    </div>
+
+    <footer>
+        
+        <div class="map">
+                <h1>MAPA DO SITE</h1>
+                <div class="grid">
+                    <a href="">-Home</a>
+                    <a href="">-Conta</a>
+                    <a href="">-Investir</a>
+                    <a href="">-Termos</a>
+                    <a href="">-Serviços</a>
+                    <a href="">-Contato</a>     
+                </div>
+                     
+        </div>
+
+        <div class="social">
+            <h1>REDES SOCIAIS</h1>
+            <a href="https://www.facebook.com/gustavo.lima.961556/" target=_blank> <img src="rsc/img/facebook.png" alt="Facebook"></a>
+            <a href="https://twitter.com/login?lang=pt" target=_blank> <img src="rsc/img/twitter.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com/risin.gus/" target=_blank> <img src="rsc/img/instagram.png" alt="Instagram"></a>
+            <a href="https://www.youtube.com/" target=_blank> <img src="rsc/img/youtube.png" alt="Youtube"></a>
+        </div>
+
+        <div class="about">
+            <h1>SOBRE</h1>
+            <p>A little invest é uma empresa de investimentos<br> criada
+            para facilitar a vida de investidores. Com<br> ela você investe
+            rapidamente o seu dinheiro.</p>
+        </div>
+    </footer>
+    <div class="footer">
+         <p>Produzido por Gustavo Lima com ❤</p>
     </div>
     
 </body>
