1.Adicionado placeholder no campo de cadastro

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -81,11 +81,12 @@
                 <h2>Crie sua conta</h2>
                 <div class="form">
                     <label for="name">Nome Completo</label>
-                    <input type="text" id="name" name="name" required>
+                    <input type="text" id="name" name="name" required placeholder="Insira seu nome completo">
                 </div>
                 <div class="form">
                     <label for="email">E-mail</label>
-                    <input type="text" name="email" id="email" required>
+                    <input type="text" name="email" id="email" required placeholder="seuemail@email.com"> 
+                    
                 </div>
                 <button>Iniciar Cadastro</button>
             </fieldset>
