--- a/public/styles/styleMain.less
+++ b/public/styles/styleMain.less
@@ -219,6 +219,10 @@ header{
     border-radius: .2rem;
 }
 
+.create-account fieldset input::placeholder{
+    opacity: .5;
+}
+
 .create-account fieldset button{
     width: 10rem;
     height: 3rem;
