1. Modificado texto da navbar de contatos para contato. 2.Na navbar foi adicionado um hover para modificar a cor de fundo e de texto dos itens.

--- a/public/styles/styleMain.css
+++ b/public/styles/styleMain.css
@@ -32,11 +32,11 @@ header img {
 }
 header {
   width: 100%;
+  padding: 1rem;
   background: #F2F2F2;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
   flex-wrap: wrap;
 }
 .menu {
@@ -46,6 +46,15 @@ header {
 .menu li {
   list-style: none;
   margin-left: 5rem;
+}
+.menu li a {
+  padding: 8px;
+  border-radius: 0.2rem;
+}
+.menu li a:hover {
+  background: #4455DD;
+  color: #ffffff;
+  transition: 0.2s;
 }
 .menu li button {
   margin-right: 3rem;
@@ -206,6 +215,9 @@ footer h1 {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 1rem;
+}
+.map .grid a {
+  padding: 3px;
 }
 .social a img {
   height: 3rem;
