--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,7 +16,7 @@
             <ul class="menu">
                 <li><a href="">Investimentos</a></li>
                 <li><a href="">Serviços</a></li>
-                <li><a href="">Contatos</a></li>
+                <li><a href="">Contato</a></li>
                 <li><button>Cadastre-se</button></li>
             </ul>
         </nav>
