--- a/public/styles/styleMain.less
+++ b/public/styles/styleMain.less
@@ -16,7 +16,7 @@
     padding: 0;;
 }
 
-h1, a, p, button, legend, label{
+h1,h2, a, p, button, legend, label{
     font-family: 'IBM Plex Sans', sans-serif;
 }
 
@@ -38,30 +38,39 @@ html, body {
     background: @background-primary-color;
 }
 
-header img{
-    height: 1.5rem;
-    margin-left: 3rem;
-}
-
-header{
-    width: 100%;
-    padding: 1rem;
+.navbar{
     background: @background-secondary-color;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+    padding-bottom: 1rem;
 }
-
 
 .menu{
-    display: flex;
-    align-items: center;
+    display: none;
+}
+
+.logo{
+    height: 1.5rem;
+    margin-left: 3rem;
+    display: inline-block;
+    margin-top: 1rem;
+}
+
+.navbar-toggle {
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+    cursor: pointer;
+    color: @primary-color;
+    font-size: 30px;
+}
+
+.active {
+    display: block;
 }
 
 .menu li {
     list-style: none;
-    margin-left: 5rem;
+    margin: 15px auto;
+    text-align: center;
 }
 
 .menu li a{
@@ -69,30 +78,19 @@ header{
     border-radius: .2rem;
 }
 
-.menu li a:hover{
-    background: @primary-color;
-    color: @background-primary-color;
-    transition: .2s;
-}
-
-.menu li button{
-    margin-right: 3rem;
-    height: 2rem;
-    width: 6rem;
-}
-
 .invest-now {
     margin-top: 2rem;
     display: flex;
     align-items: top;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    margin-bottom: 1rem;
 }
 
 .invest-now h1{
-    font-size: 3rem;
-    letter-spacing: .2rem;
-    line-height: 3.5rem;
-    word-spacing: .8rem;
+    font-size: 1rem;
+    letter-spacing: .1rem;
+    line-height: 1.5rem;
+    word-spacing: .4rem;
     margin-left: 4rem;
 }
 
@@ -102,20 +100,22 @@ header{
     margin-top: 6rem;
     font-size: 1rem;
     margin-left: 4rem;
+
 }
 
 .invest-now img{
-    height: 20rem;
+    height: 10rem;
     margin-right: 4rem;
 }
 
 
 .banks {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
     background: @primary-color;
-    height: 15rem;
+    height: 10.9rem;
+    overflow: hidden;
 }
 
 
@@ -123,12 +123,12 @@ header{
 .proffits {
     background: @background-primary-color;
     height: 11rem;
-    width: 15rem;
+    width: 20rem;
     border-radius: .4rem;
     border: 1px @primary-color;
+    margin-top: .7rem;
 
 }
-
 
 .proffits p{
     margin-top: .7rem;
@@ -154,8 +154,9 @@ header{
 .proffits button{
   height: 2rem;
   width: 11rem;
-  margin-top: .8rem;
+  margin-top: .4rem;
   margin-left: 2rem;
+  margin-bottom: .5rem;
 }
 
 .proffits button img{
@@ -171,12 +172,14 @@ header{
 
 .contact-img{
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
     margin-top: 2rem;
 }
 
 .contact-img img{
-    height: 20rem;
+    width: 15rem;
 }
 
 .contact button{
@@ -193,8 +196,9 @@ header{
 .account{
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     margin-top: -.2rem;
+    background: @background-secondary-color;
 }
 
 .create-account h2{
@@ -207,11 +211,8 @@ header{
 
 .create-account fieldset{
     border: none;
-    width: 50rem;
-    height: 22rem;
-    background: @background-secondary-color;
     text-align: center;
-    margin-left: -10rem;
+    margin-bottom: 1rem;
 }
 
 .create-account fieldset label{
@@ -231,6 +232,7 @@ header{
 
 .create-account fieldset input::placeholder{
     opacity: .5;
+    padding-left: .5rem;
 }
 
 .create-account fieldset button{
@@ -239,12 +241,14 @@ header{
 }
 
 .account .support img{
-    height: 18rem;
+    width: 15rem;
+    display: none;
 }
 
 .account .support p{
     text-align: center;
     margin-top: 2rem;
+    display: none;
 }
 
 footer {
@@ -252,7 +256,8 @@ footer {
     display: flex;
     align-items: top;
     justify-content: space-evenly;
-    height: 13rem;
+    height: 14rem;
+    display: none;
 }
 
 footer h1{
@@ -268,7 +273,6 @@ footer h1{
 .map .grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 1rem;
 }
 
 .map .grid a{
@@ -276,8 +280,8 @@ footer h1{
 }
 
 .social a img{
-    height: 3rem;
-    margin-right: 1rem;
+    height: 2rem;
+    margin-right: .2rem;
     margin-top: 1rem;
 }
 
@@ -298,4 +302,96 @@ footer p, a {
     color: @footer-text-color;
     padding-top: 1rem;
     margin-left: 2rem;
+}
+
+
+@media screen and (min-width: 768px) {
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 0;
+        height: 70px;
+        align-items: center;
+    }
+
+    .menu{
+        display: flex;
+        margin-right: 30px;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    .menu li {
+        margin: 0;
+    }
+
+    .menu-links{
+        margin-left: 40px;
+    }
+
+    .menu-links:hover{
+        background: @primary-color;
+        color: @background-primary-color;
+        transition: .2s;
+    }
+  
+    .logo {
+        margin-top: .1rem;
+    }
+    .navbar-toggle {
+        display: none;
+    }
+
+    .invest-now h1{
+        font-size: 2rem;
+        line-height: 2rem;
+
+    }
+    .invest-now img{
+        height: 20rem;
+    }
+
+    .banks {
+        overflow: show;
+        flex-direction: row;
+        justify-content: space-evenly;
+        height: 12rem;
+    }
+
+    .proffits {
+        height: 10rem;
+        width: 11rem;
+    }
+
+    .proffits button{
+        width: 7rem;
+        margin-left: 1rem;
+    }
+
+    .proffits button img{
+        margin-left: 1rem;
+        height: .8rem;
+    }
+    
+
+    .contact-img {
+        flex-direction: row;
+    }
+
+    .account{
+        justify-content: space-evenly;
+    }
+
+    .account .support img, .account .support p{
+        display: flex;
+        justify-content: center;
+    }
+
+    footer {
+        display: flex;
+    }
+
+
+
 }
