1. Ajustado espaçamentos para melhor visualização em telas menores que 400px

--- a/public/styles/styleMain.less
+++ b/public/styles/styleMain.less
@@ -26,6 +26,8 @@ button{
     color: @button-text-color;
     border-radius: .2rem;
     cursor: pointer;
+    font-weight: bold;
+    letter-spacing: 0.1rem;
 }
 
 a{
@@ -81,7 +83,6 @@ html, body {
 .invest-now {
     margin-top: 2rem;
     display: flex;
-    align-items: top;
     justify-content: space-evenly;
     margin-bottom: 1rem;
 }
@@ -104,8 +105,8 @@ html, body {
 }
 
 .invest-now img{
-    height: 10rem;
-    margin-right: 4rem;
+    height: 6rem;
+    margin-right: 3rem;
 }
 
 
@@ -123,7 +124,7 @@ html, body {
 .proffits {
     background: @background-primary-color;
     height: 11rem;
-    width: 20rem;
+    width: 18rem;
     border-radius: .4rem;
     border: 1px @primary-color;
     margin-top: .7rem;
@@ -391,7 +392,4 @@ footer p, a {
     footer {
         display: flex;
     }
-
-
-
 }
