--- a/public/styles/styleMain.css
+++ b/public/styles/styleMain.css
@@ -18,6 +18,8 @@ button {
   color: #f2f2f2;
   border-radius: 0.2rem;
   cursor: pointer;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
 }
 a {
   text-decoration: none;
@@ -63,7 +65,6 @@ body {
 .invest-now {
   margin-top: 2rem;
   display: flex;
-  align-items: top;
   justify-content: space-evenly;
   margin-bottom: 1rem;
 }
@@ -82,8 +83,8 @@ body {
   margin-left: 4rem;
 }
 .invest-now img {
-  height: 10rem;
-  margin-right: 4rem;
+  height: 6rem;
+  margin-right: 3rem;
 }
 .banks {
   display: flex;
@@ -96,7 +97,7 @@ body {
 .proffits {
   background: #ffffff;
   height: 11rem;
-  width: 20rem;
+  width: 18rem;
   border-radius: 0.4rem;
   border: 1px #4455DD;
   margin-top: 0.7rem;
